-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Critical - P2
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Double unlock
May result in undefined behavior. Attempt to release a non-recursive lock that is not held
/src/mongo/scripting/mozjs/proxyscope.cpp:55: LOCK 175042 "mutex" initializes and leaves "this->_mutex" unlocked. [Note: The source code implementation of the function has been overridden by a builtin model.]
- causes
-
SERVER-111617 Coverity analysis defect 177326: Data race condition
-
- Closed
-
- related to
-
SERVER-110890 Coverity analysis defect 175049: Logically dead code
-
- Closed
-