SERVER-110891 Address false positive for double unlock in proxyscope (#41719)

GitOrigin-RevId: 356fbcf23c03f15ce75cc4f4f935f5495859950b